Added Link to Index.html

--- a/Week 1/Project (Learning)/lesson1.html
+++ b/Week 1/Project (Learning)/lesson1.html
@@ -23,6 +23,6 @@
         <li>Class 3</li>
     </ul>
     <p>this is our <a href="ITEM 6 copy.pdf">website</a> </p>
-    <img src="../night2.jpg" width="400px" height="600px">
+    <img src="night 1.jpg" width="400px" height="600px">
   </body>
 </html>
