--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
 <h1>Hello World</h1>
-<a href="/Week 1/Weekend Tutorial/Challenge 4.html">PH Table</a>
+<p><a href="/Week 1/Weekend Tutorial/Challenge 4.html">PH Table</a></p>
   </body>
 </html>
