open file in the next tab

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   </head>
   <body>
 <h1>Hello World</h1>
-<p><a href="/Week 1/Weekend Tutorial/Challenge 4.html">PH Table</a></p>
+<p><a href="Week 1/Weekend Tutorial/Challenge 1.html" target="_blank">Challenge 1</a></p>
+<p><a href="Week 1/Weekend Tutorial/Challenge 2.html" target="_blank">Challenge 2</a></p>
+<p><a href="Week 1/Weekend Tutorial/Challenge 3.html" target="_blank">Challenge 3</a></p>
+<p><a href="Week 1/Weekend Tutorial/Challenge 4.html" target="_blank">Challenge 4</a></p>
+
   </body>
 </html>
